[package]
name = "stm32rust"
version = "0.0.1"
authors = ["codeandbacon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.4"
panic-halt = "0.2.0"


[dependencies.stm32f4xx-hal]
features = ["stm32f411", "rt"]
version = "0.8.3"
